Update tutorial link for adding CM maps

--- a/views/chamber.phtml
+++ b/views/chamber.phtml
@@ -67,7 +67,7 @@
         <div class="not-public-chambers">
             <span class="notification">
               This chamber is not available through official Steam leaderboard pages, but is accessible by modifying the game's
-              internal map list. A tutorial for doing this can be found <b><a href="http://youtu.be/8mtyKGh_e-w?t=18m30s" target="_blank">here</a></b>.
+              internal map list. A tutorial for doing this can be found <b><a href="http://youtu.be/nwOj6cBL9Rk" target="_blank">here</a></b>.
               Note that unlike an official chamber, scores you obtain for this chamber are not automatically synced to this website.
               You therefore need to submit any scores you obtain for this chamber manually via your profile.
             </span>
