Remove mentions of Google Drive from about page

--- a/views/about.phtml
+++ b/views/about.phtml
@@ -132,8 +132,9 @@
         This site is currently hosted on <a href="https://hetzner.cloud/?ref=LSfkawynXCD3" target="_blank">Hetzner</a>.
         </p>
         <p>
-        Demos are stored using <a href="https://www.google.com/drive/" target="_blank">Google Drive</a>.
-        The folder containg all demos can be found <a href="https://drive.google.com/folderview?id=<?=DemoManager::demoFolderId?>&usp=sharing" target="_blank">here</a>.
+        Demos are stored using Hetzner Storage Box.
+        The folder containg all demos can be accessed on the following rsync address:
+        <code>rsync://board.portal2.sr:/demos</code>
         </p>
     </div>
 
