Basic auto render links

--- a/views/chambers.phtml
+++ b/views/chambers.phtml
@@ -102,6 +102,10 @@
                                                 '<?=$rank1youtube?>',
                                                 '<?=$mapName?> - <?=Leaderboard::convertToTime($playerData["scoreData"]["score"])?> - <?=Util::escapeQuotesHTML($rank1String)?>');"
                                             class="youtubeEmbedButton fa fa-youtube-play" aria-hidden="true"></i>
+                                        <?php else: ?>
+                                            <?php if (isset($playerData["scoreData"]["playerRank"]) && $playerData["scoreData"]["playerRank"] <= 200 && ($playerData["scoreData"]["hasDemo"] == 1)) : ?>
+                                                <i onclick="window.open('https://autorender.portal2.sr/video.html?v=<?=$playerData["scoreData"]["changelogId"]?>','_blank')" class="youtubeEmbedButton fa fa-play" title="Auto Render" aria-hidden="true"></i>
+                                            <?php endif; ?>
                                         <?php endif; ?>
                                     </div>
                                 </div>
@@ -127,6 +131,10 @@
                                           '<?=$playerData["scoreData"]["youtubeID"]?>',
                                           '<?=$mapName?> - <?=Leaderboard::convertToTime($playerData["scoreData"]["score"])?> - <?=Util::escapeQuotesHTML($playerData["userData"]["boardname"])?>');"
                                          class="youtubeEmbedButton fa fa-youtube-play" aria-hidden="true"></i>
+                                  <?php else: ?>
+                                    <?php if (isset($playerData["scoreData"]["playerRank"]) && $playerData["scoreData"]["playerRank"] <= 200 && ($playerData["scoreData"]["hasDemo"] == 1)) : ?>
+                                          <i onclick="window.open('https://autorender.portal2.sr/video.html?v=<?=$playerData["scoreData"]["changelogId"]?>','_blank')" class="youtubeEmbedButton fa fa-play" title="Auto Render" aria-hidden="true"></i>
+                                    <?php endif; ?>
                                   <?php endif; ?>
                               </div>
                           </div>
