--- a/views/profile.phtml
+++ b/views/profile.phtml
@@ -1265,6 +1265,13 @@
                     " onclick=\"embedOnBody('"+entry.youtubeID+"', '"+entry.chamberName+" - "+formatScoreTime(entry.score)+"');\"" +
                     " class='fa fa-youtube-play' aria-hidden='true'></i>" +
                 "</div>" +
+            // TODO - Add in later
+            // "<i" +
+            // ((entry.youtubeID == null) ?
+            //     (entry.hasDemo == 1 && (entry.post_rank != null && entry.post_rank <= 200) && (new Date(date).valueOf() > 1660433072000)) ?
+            //         " onclick=\"window.open('https://autorender.portal2.sr/video.html?v="+entry.id+"','_blank')\" class='youtubeEmbedButton fa fa-play' title='Auto Render'" :
+            //         " style='display: none'" : " onclick=\"embedOnBody('"+entry.youtubeID+"', '"+entry.chamberName+" - "+formatScoreTime(entry.score)+"');\" class='fa fa-youtube-play'") +
+            // " aria-hidden='true'></i>" +
                 //$rank.prop('outerHTML') +
                "<div class='rankDiff'>" +
                    $preRank.prop('outerHTML') +
