Better logic by calling api

--- a/views/chambers.phtml
+++ b/views/chambers.phtml
@@ -1,6 +1,7 @@
 <?php $mapInfo = $GLOBALS["mapInfo"]; ?>
 <?php $mode = Router::$location[2]; ?>
 <?php $youtubeIDs = (($mode == "coop") ? Cache::get("COOPyoutubeIDs") : Cache::get("SPyoutubeIDs")) ?>
+<?php $autoRenderedVideoIds = AutoRenderApiClient::getChambersVideos($view->board)?>
 
 <script>
     function goToChamber(evt, map) {
@@ -103,7 +104,7 @@
                                                 '<?=$mapName?> - <?=Leaderboard::convertToTime($playerData["scoreData"]["score"])?> - <?=Util::escapeQuotesHTML($rank1String)?>');"
                                             class="youtubeEmbedButton fa fa-youtube-play" aria-hidden="true"></i>
                                         <?php else: ?>
-                                            <?php if (isset($playerData["scoreData"]["playerRank"]) && $playerData["scoreData"]["playerRank"] <= 200 && ($playerData["scoreData"]["hasDemo"] == 1)) : ?>
+                                            <?php if (in_array((int) $playerData["scoreData"]["changelogId"], $autoRenderedVideoIds)) : ?>
                                                 <i onclick="window.open('https://autorender.portal2.sr/video.html?v=<?=$playerData["scoreData"]["changelogId"]?>','_blank')" class="youtubeEmbedButton fa fa-play" title="Auto Render" aria-hidden="true"></i>
                                             <?php endif; ?>
                                         <?php endif; ?>
@@ -132,7 +133,7 @@
                                           '<?=$mapName?> - <?=Leaderboard::convertToTime($playerData["scoreData"]["score"])?> - <?=Util::escapeQuotesHTML($playerData["userData"]["boardname"])?>');"
                                          class="youtubeEmbedButton fa fa-youtube-play" aria-hidden="true"></i>
                                   <?php else: ?>
-                                    <?php if (isset($playerData["scoreData"]["playerRank"]) && $playerData["scoreData"]["playerRank"] <= 200 && ($playerData["scoreData"]["hasDemo"] == 1)) : ?>
+                                    <?php if (in_array((int) $playerData["scoreData"]["changelogId"], $autoRenderedVideoIds)) : ?>
                                           <i onclick="window.open('https://autorender.portal2.sr/video.html?v=<?=$playerData["scoreData"]["changelogId"]?>','_blank')" class="youtubeEmbedButton fa fa-play" title="Auto Render" aria-hidden="true"></i>
                                     <?php endif; ?>
                                   <?php endif; ?>
