--- a/views/profile.phtml
+++ b/views/profile.phtml
@@ -1,5 +1,6 @@
 <?php $user = $view->profile; ?>
 <?php $mapInfo = $GLOBALS["mapInfo"]; ?>
+<?php $autoRenderedIds = AutoRenderApiClient::getUserVideos($user); ?>
 <?php $activityDayRange = 60 ?>
 <?php $userActivity = $user->getChangelog($activityDayRange)?>
 <?php include("util/ProfileView.php")?>
@@ -344,7 +345,7 @@
                                 <div class="scoretable">
                                     <?php foreach($mapInfo["chapters"][$chapterId]["maps"] as $mapId): ?>
                                         <?php if(isset($user->times->SP["chambers"]["chamber"][$chapterId][$mapId])): ?>
-                                            <?php ProfileView::chamberScoreRow($user, $mapInfo, $mapId, $user->times->SP["chambers"]["chamber"][$chapterId][$mapId]); ?>
+                                            <?php ProfileView::chamberScoreRow($user, $mapInfo, $mapId, $user->times->SP["chambers"]["chamber"][$chapterId][$mapId], $autoRenderedIds); ?>
                                         <?php else: ?>
                                             <?php ProfileView::emptyChamberScoreRow($mapId, $mapInfo); ?>
                                         <?php endif;?>
@@ -395,7 +396,7 @@
 
                             <?php endif; ?>
                                 
-                            <?php ProfileView::chamberScoreRow($user, $mapInfo, $mapId, $score); ?>
+                            <?php ProfileView::chamberScoreRow($user, $mapInfo, $mapId, $score, $autoRenderedIds); ?>
                             
                             <?php endforeach; ?>
                             </div>
@@ -452,7 +453,7 @@
                                                 <div class="scoretable">
                                         <?php $emptyScoresEncountered = true; ?>
                                     <?php endif; ?>
-                                    <?php ProfileView::chamberScoreRow($user, $mapInfo, $mapId, $score); ?>
+                                    <?php ProfileView::chamberScoreRow($user, $mapInfo, $mapId, $score, $autoRenderedIds); ?>
                                 <?php endforeach; ?>
                             </div>
                         </div>                        
@@ -485,7 +486,7 @@
                           <div class="scoretable">
                               <?php foreach($mapInfo["chapters"][$chapterId]["maps"] as $mapId): ?>
                                   <?php if(isset($user->times->COOP["chambers"]["chamber"][$chapterId][$mapId])): ?>
-                                      <?php ProfileView::chamberScoreRow($user, $mapInfo, $mapId, $user->times->COOP["chambers"]["chamber"][$chapterId][$mapId]); ?>
+                                      <?php ProfileView::chamberScoreRow($user, $mapInfo, $mapId, $user->times->COOP["chambers"]["chamber"][$chapterId][$mapId], $autoRenderedIds); ?>
                                   <?php else: ?>
                                       <?php ProfileView::emptyChamberScoreRow($mapId, $mapInfo); ?>
                                   <?php endif;?>
@@ -532,7 +533,7 @@
                                     <?php $emptyScoresEncountered = true; ?>
                             <?php endif; ?>
                                 
-                            <?php ProfileView::chamberScoreRow($user, $mapInfo, $mapId, $score); ?>
+                            <?php ProfileView::chamberScoreRow($user, $mapInfo, $mapId, $score, $autoRenderedIds); ?>
                             
                             <?php endforeach; ?>
                             </div>
@@ -590,7 +591,7 @@
                                                 <div class="scoretable">
                                         <?php $emptyScoresEncountered = true; ?>
                                     <?php endif; ?>
-                                    <?php ProfileView::chamberScoreRow($user, $mapInfo, $mapId, $score); ?>
+                                    <?php ProfileView::chamberScoreRow($user, $mapInfo, $mapId, $score, $autoRenderedIds); ?>
                                 <?php endforeach; ?>
                             </div>
                         </div>                        
