Link to new rules site

--- a/views/about.phtml
+++ b/views/about.phtml
@@ -3,7 +3,7 @@
 
     <h1 class="title">Rules & console commands</h1>
     <div class="container">
-    For rules and console commands, go <a href="https://docs.google.com/document/d/1xzN3vX4en2UCDeB3HPd_3D2zLaVkNsVtiNFyM0qlEXs" target="_blank">here</a>.
+    For rules and console commands, go <a href="https://rules.portal2.sr/" target="_blank">here</a>.
     </div>
 
     <h1 class="title">Point calculation</h1>
