Fix submission container not working This fixes the problem when switching between different chambers.

--- a/views/profile.phtml
+++ b/views/profile.phtml
@@ -1020,6 +1020,8 @@
         $scoreMenu.append($entryContainer);
 
         if (profilePermissions) {
+            $(".submissionContainer").remove();
+
             var $submissionContainer = $(
                 "<div class='submissionContainer'>" +
                     "<div class='createSubmission'>" +
