Fix CSS for HTML5

--- a/views/profile.phtml
+++ b/views/profile.phtml
@@ -1023,7 +1023,7 @@
             var $submissionContainer = $(
                 "<div class='submissionContainer'>" +
                     "<div class='createSubmission'>" +
-                        "<div class='button'>Create new submission</div>" +
+                        "<div class='button submission'>Create new submission</div>" +
                     "</div>" +
                 "</div>");
 
