Accept .dem files for new submissions

--- a/views/profile.phtml
+++ b/views/profile.phtml
@@ -1086,7 +1086,7 @@
                 "</div>" +
                 "<div class='uploadDemoContainer'>" +
                     "<label class='button browseDemo'>" +
-                        "<input type='file' name='demoFile'/>" +
+                        "<input type='file' name='demoFile' accept='.dem'/>" +
                         "<span>Browse for demo</span>" +
                     "</label>" +
                     "<div class='fileName'></div>" +
