Fix CSS for HTML5

--- a/views/profile.phtml
+++ b/views/profile.phtml
@@ -1192,7 +1192,7 @@
             var fileNameComponents = $(this).val().split("\\");
             var fileName = fileNameComponents[fileNameComponents.length - 1];
             $(this).parent().parent().find(".uploadDemo").show();
-            $(this).parent().parent().find(".filename").text(fileName);
+            $(this).parent().parent().find(".fileName").text(fileName);
         });
     }
 
@@ -1637,7 +1637,7 @@
                 var fileNameComponents = $(this).val().split("\\");
                 var fileName = fileNameComponents[fileNameComponents.length - 1];
                 $(this).parent().parent().find(".uploadDemo").show();
-                $(this).parent().parent().find(".filename").text(fileName);
+                $(this).parent().parent().find(".fileName").text(fileName);
             });
 
             $changeMenu.find(".button.uploadDemo").on('click', function(event) {
